Backport to be able to switch to JDK 8 if needed